--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.8"
-    , "jade": ">= 0.0.1"
-  }
+    "name": "mark-it",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "express": "~4.9.0",
+        "body-parser": "~1.8.1",
+        "cookie-parser": "~1.3.3",
+        "morgan": "~1.3.0",
+        "serve-favicon": "~2.1.3",
+        "debug": "~2.0.0",
+        "jade": "~1.6.0",
+        "mongoose": "^4.0.6",
+        "nodemailer":"^1.3.2",
+        "ejs":"^2.3.2",
+        "pm2": "0.14.5 ",
+        "nodemon":"1.3.8"
+    }
 }
