--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "mongoose": "^4.0.6",
         "nodemailer": "^1.3.2",
         "ejs": "^2.3.2",
-        "passport-facebook":"^2.0.0"
+        "passport": "^0.3.0",
+        "passport-facebook": "^2.0.0"
     },
     "subdomain": "mark-it",
     "engines": {
