--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "nodemailer": "^1.3.2",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^0.2.0",
     "serve-favicon": "~2.1.3"
   },
   "subdomain": "mark-it",
