--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "passport-facebook": "^2.0.0",
         "passport-google-oauth": "^0.2.0",
         "passport-twitter": "^1.0.3",
-        "serve-favicon": "~2.1.3"
+        "serve-favicon": "~2.1.3",
+        "mongoose": "^4.0.6"
     },
     "subdomain": "mark-it",
     "engines": {
