--- a/package.json
+++ b/package.json
@@ -1,27 +1,39 @@
 {
-    "name": "mark-it",
-    "version": "0.1.0-1",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.8.1",
-        "cookie-parser": "~1.3.3",
-        "debug": "~2.0.0",
-        "express": "~4.9.0",
-        "express-session": "^1.12.1",
-        "mongoose": "^4.0.6",
-        "morgan": "~1.3.0",
-        "passport": "^0.3.0",
-        "passport-facebook": "^2.0.0",
-        "passport-google-oauth": "^0.2.0",
-        "passport-twitter": "^1.0.3",
-        "pm2": "^1.0.0",
-        "serve-favicon": "~2.1.3"
-    },
-    "subdomain": "mark-it",
-    "engines": {
-        "node": "0.10.x"
-    }
+  "name": "mark-it",
+  "version": "0.1.0-1",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "latest",
+    "cookie-parser": "latest",
+    "debug": "latest",
+    "dotenv": "^2.0.0",
+    "express": "latest",
+    "express-session": "latest",
+    "mongoose": "latest",
+    "morgan": "latest",
+    "passport": "latest",
+    "passport-facebook": "latest",
+    "passport-google-oauth": "latest",
+    "passport-twitter": "latest",
+    "pm2": "latest",
+    "serve-favicon": "latest",
+    "swig": "^1.4.2"
+  },
+  "subdomain": "mark-it",
+  "engines": {
+    "node": "0.10.x"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-less": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "jshint-stylish": "latest"
+  }
 }
