--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-loading-bar": "^0.8.0",
     "body-parser": "latest",
     "cookie-parser": "latest",
     "debug": "latest",
